--- a/MovieStore/Views/Home/Index.cshtml
+++ b/MovieStore/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>This is my first mvc project</p>
+    <p>There will be a movie store in this page </p>
 </div>
